Closed
Bug 1478754
Opened 7 years ago
Closed 7 years ago
WebGL crash when webgl.enable-surface-texture is enabled on Android
Categories
(Core :: Graphics: CanvasWebGL, defect)
Tracking
()
RESOLVED
FIXED
mozilla63
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox-esr60 | --- | unaffected |
firefox61 | --- | unaffected |
firefox62 | --- | wontfix |
firefox63 | --- | fixed |
People
(Reporter: mortimergoro, Assigned: mortimergoro)
References
Details
(Whiteboard: [geckoview:fxr:p1])
Crash Data
Attachments
(1 file)
We can reproduce this crash in Firefox Reality using GeckoView
STR
Enable webgl.enable-surface-texture
Load https://developer.playcanvas.com/en/tutorials/webvr-lab/
Crashes on the MOZ_RELEASE_ASSERT(mSurface->GetAvailable()) in SharedSurface_SurfaceTexture::Commit()
Assignee | ||
Comment 1•7 years ago
|
||
I'm going to submit a patch soon
Assignee | ||
Updated•7 years ago
|
Whiteboard: [geckoview:fxr:p1]
Comment hidden (mozreview-request) |
Assignee | ||
Updated•7 years ago
|
Attachment #8995320 -
Flags: review?(rbarker)
Attachment #8995320 -
Flags: review?(jgilbert)
Comment 3•7 years ago
|
||
mozreview-review |
Comment on attachment 8995320 [details]
Bug 1478754 - WebGL crash when webgl.enable-surface-texture is enabled on Android;
https://reviewboard.mozilla.org/r/259780/#review266806
Attachment #8995320 -
Flags: review?(rbarker) → review+
Assignee | ||
Updated•7 years ago
|
Assignee: nobody → imanol
Comment 4•7 years ago
|
||
mozreview-review |
Comment on attachment 8995320 [details]
Bug 1478754 - WebGL crash when webgl.enable-surface-texture is enabled on Android;
https://reviewboard.mozilla.org/r/259780/#review267104
Change the patch summary line to reflect what's being fixed in the code, not what the repro case is. Repro info should go in the summary block below the bug line.
Attachment #8995320 -
Flags: review?(jgilbert) → review+
Comment hidden (mozreview-request) |
Assignee | ||
Updated•7 years ago
|
Summary: PlayCanvas WebGL demo crashes when webgl.enable-surface-texture is enabled on Android → WebGL crash when webgl.enable-surface-texture is enabled on Android
Assignee | ||
Updated•7 years ago
|
Keywords: checkin-needed
Pushed by nbeleuzu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/34388a2acea8
WebGL crash when webgl.enable-surface-texture is enabled on Android; r=jgilbert,rbarker
Keywords: checkin-needed
Comment 7•7 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox63:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Comment 8•7 years ago
|
||
In the future, this is what I'd like to see for a patch summary:
> Don't composite from SharedSurface_SurfaceTexture until the surface is Available.
The goal here is to tell the reader at a glance what the patch actually changes, not what symptoms it fixes.
(ni for fyi)
Flags: needinfo?(imanol)
Assignee | ||
Comment 10•7 years ago
|
||
Thanks, I'll use that style for future commits. I understood that the PlayCanvas mention was the problem, not the "Fix WebGL crash" style :)
Flags: needinfo?(imanol)
Comment 11•7 years ago
|
||
Imanol, could this WebGL crash affect GeckoView in other apps like Focus? Should we uplift your fix to GeckoView 62 for Focus?
SharedSurface_SurfaceTexture::Commit() is the #2 top crash in GeckoView 62 Beta. IIUC, FxR is using GeckoView 63 Nightly and Focus Nightly is using GeckoView 62 Beta, so these GeckoView 62 crashes are probably Focus. Nearly of these crash reports point to video crashes.
https://crash-stats.mozilla.com/signature/?product=FennecAndroid&_sort=-date&process_type=content&version=62.0b&signature=mozilla%3A%3Agl%3A%3ASharedSurface_SurfaceTexture%3A%3ACommit&date=%3E%3D2018-07-27T15%3A48%3A15.000Z&date=%3C2018-08-03T15%3A48%3A15.000Z
Crash Signature: [@ mozilla::gl::SharedSurface_SurfaceTexture::Commit ]
status-firefox61:
--- → wontfix
status-firefox62:
--- → ?
status-firefox-esr52:
--- → wontfix
status-firefox-esr60:
--- → wontfix
Flags: needinfo?(imanol)
Assignee | ||
Comment 12•7 years ago
|
||
Chris, yes I think that this patch could fix the #2 top crash in GeckoView. The crash happened during a normal webpage load, not while in WebVR, so it should help with Focus/GV crashes too.
Flags: needinfo?(imanol)
Comment 13•7 years ago
|
||
Looks like this crash is a regression starting in GV 62.0a1. The crash volume is not high, so let's wait before uplifting to GV 62 Beta.
Comment 14•7 years ago
|
||
status-firefox62=wontfix because we don't need to uplift this fix to 62 Beta. The crash volume seems low. Most of the crashes are from video playback.
You need to log in
before you can comment on or make changes to this bug.
Description
•