Bug 1478754 - WebGL crash when webgl.enable-surface-texture is enabled on Android; r=jgilbert,rbarker

MozReview-Commit-ID: GBTvZiLspvP